<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <TableLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/table_layout_9_open" />

                <TextView
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="@string/table_layout_9_open_shortcut" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/table_layout_9_save" />

                <TextView
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="@string/table_layout_9_save_shortcut" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/table_layout_9_save_as" />

                <TextView
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="@string/table_layout_9_save_as_shortcut" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/table_layout_9_save_all" />

                <TextView
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="@string/table_layout_9_save_all_shortcut" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/table_layout_9_import" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/table_layout_9_export" />

                <TextView
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="@string/table_layout_9_export_shortcut" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_layout_9_toggle_shrink" />
    </LinearLayout>
</ScrollView>
