<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2012 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="HardcodedText"
    tools:targetApi="ice_cream_sandwich">
    <item
        android:id="@+id/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_bar_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_share_action_provider_action_bar"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        android:title="@string/action_bar_share_with"
        app:showAsAction="always" />
    <group
        android:id="@+id/show_tabs_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/show_tabs"
            android:title="Show Tabs"
            app:showAsAction="never" />
        <item
            android:id="@+id/hide_tabs"
            android:checked="true"
            android:title="Hide Tabs"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/stable_layout_group"
        android:checkableBehavior="all">
        <item
            android:id="@+id/stable_layout"
            android:checked="true"
            android:title="Stable Layout"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_bar_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/action_bar_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_size"
                android:icon="@android:drawable/ic_menu_sort_by_size"
                android:onClick="onSort"
                android:title="@string/action_bar_sort_size" />
            <item
                android:id="@+id/action_sort_alpha"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:onClick="onSort"
                android:title="@string/action_bar_sort_alpha" />
        </menu>
    </item>
</menu>
